clean repo fix bug for 2020

--- a/index.html
+++ b/index.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Sophie Marchand, Front-End Web developer" />
-    <meta name="keywords" content="web developer, front end developer, developer, react developer, wordpress developer, digital project management, portfolio developer" />
-    <title>Sophie Marchand - Web Developer</title>
+    <meta name="description" content="" />
+    <title>My Personal Website</title>
     <meta name="Content-Language" content="en"/>
     <meta name="author" content="Sophie Marchand" />
-    <meta name="Subject" content="Web Developer portfolio"/>
-    <meta name="Copyright" content="Sophie Marchand"/>
-    <meta name="Category" content="portfolio"/>
-    <!-- windows -->
-    <meta name="application-name" content="Sophie Marchand Web developer" />
-    <meta name="msapplication-TileColor" content="#644870" />
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-      <!-- apple -->
-   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-   <!-- favicon -->
-   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-   <link rel="manifest" href="/manifest.json">
-    <!--LINKEDIN & FACEBOOK-->
-    <meta property="og:url" content="https://sophiemay.dev/"/>
-    <meta property="og:title" content="Sophie Marchand - Web Developer"/>
-    <meta property="og:description" content=" Portfolio - Sophie M."/>
-    <meta property='og:image' content="img/screenshot-portfolio.png"/>
-    <!--TWITTER-->
-    <meta name="twitter:site" content="Portfolio de Sophie Marchand"/>
-    <meta name="twitter:title" content="Sophie M., Web Developer"/>
-    <meta name="twitter:description" content="Web developer Portfolio"/>
-    <meta name="twitter:image" content="img/screenshot-portfolio.png"/>
-    <link rel="canonical" href="sophiemay.dev"/>
-    <link rel="home" href="sophiemay.dev"/>
+    <meta name="Subject" content=""/>
+    <meta name="Copyright" content=""/>
+    <meta name="Category" content=""/>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.min.css" media="screen"/>
     <link href="https://fonts.googleapis.com/css?family=Chicle|Quicksand&display=swap" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/27a19e7534.js"></script>
 </head>
+
 
 <body itemscope itemtype="http://schema.org/webPage">
 
@@ -52,10 +28,10 @@
             <nav class="top-nav">
                 <ul>
                     <li>
-                        <p><a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined-h"> ABOUT </a></p>
+                        <p><a href="/about" aria-label="go to the about section" class="underlined-h"> ABOUT </a></p>
                     </li>
                     <li>
-                        <p><a class="name underlined-h" href="https://sophiemay.dev/" aria-label="go back to the top of the page">Sophie M.</a></p>
+                        <p><a class="name underlined-h" href="/" aria-label="go back to the top of the page">Sophie M.</a></p>
                     </li>
                 </ul>
 
@@ -64,23 +40,19 @@
             <nav class="right-nav">
                 <ul>
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
+                        <a href="/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
                     </li>
 
                     <li>
-                        <a href="https://twitter.com/S0f1eM?lang=fr" target="_blank" aria-label="twitter link" rel="noopener">
-                  <img src="img/twitter.png" width="32px"/>
-                  </a>
+                        <a href="https://twitter.com/" target="_blank" aria-label="twitter link" rel="noopener"><i class="fa fa-twitter"></i></a>
                     </li>
 
                     <li>
-                        <a href="https://fr.linkedin.com/in/sophie-marchand-00a57b131" target="_blank" aria-label="linkedin link" rel="noopener">
-                      <img src="img/linkedin.png" width="32px"/>
-                    </a>
+                        <a href="https://fr.linkedin.com/in/" target="_blank" aria-label="linkedin link" rel="noopener"><i class="fa fa-linkedin"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -88,20 +60,20 @@
             <nav class="mobile-nav">
                 <ul>
                     <li data-menuanchor="about">
-                        <a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined">ABOUT</a>
+                        <a href="/about" aria-label="go to the about section" class="underlined">ABOUT</a>
                     </li>
 
                     <li data-menuanchor="Home">
-                        <a href="https://sophiemay.dev/" aria-label="go back to the top of the page">
+                        <a href="/" aria-label="go back to the top of the page">
                             <p class="name">Sophie M.</p>
                         </a>
                     </li>
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
+                        <a href="/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
                     </li>
                 </ul>
             </nav>
