--- a/about.html
+++ b/about.html
@@ -2,38 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Sophie Marchand, Front-End Web developer" />
-    <meta name="keywords" content="web developer, front end developer, developer, react developer, wordpress developer, digital project management, portfolio developer" />
-    <title>Sophie Marchand - Web Developer</title>
-    <meta name="Content-Language" content="en">
+    <meta name="description" content="" />
+    <title>My Personal Website</title>
+    <meta name="Content-Language" content="en"/>
     <meta name="author" content="Sophie Marchand" />
-    <meta name="Subject" content="Web Developer portfolio">
-    <meta name="Copyright" content="Sophie Marchand">
-    <meta name="Category" content="portfolio">
-    <!-- windows -->
-    <meta name="application-name" content="Sophie Marchand Web developer" />
-    <meta name="msapplication-TileColor" content="#644870" />
-    <!-- apple -->
-    <link rel="apple-touch-icon" href="/custom_apple_icon.png">
-    <!--TWITTER & FACEBOOK-->
-    <meta property="og:url" content="http://sophiemay.dev/">
-    <meta property="og:title" content="Sophie Marchand - Web Developer">
-    <meta property="og:description" content="Web developer portfolio -Sophie M.">
-    <meta name="twitter:site" content="">
-    <meta name="twitter:title" content="Sophie M., Web Developer">
-    <meta name="twitter:description" content="Web developer Portfolio">
-    <meta name="twitter:image" content="img/screenshot-portfolio.png">
-    <link rel="canonical" href="sophiemay.dev">
-    <link rel="home" href="sophiemay.dev">
-    <link rel="stylesheet" href="style.min.css" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Chicle|Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-    <script src="https://use.fontawesome.com/130f092642.js"></script>
+    <meta name="Subject" content=""/>
+    <meta name="Copyright" content=""/>
+    <meta name="Category" content=""/>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="style.min.css" media="screen"/>
+    <link href="https://fonts.googleapis.com/css?family=Chicle|Quicksand&display=swap" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/27a19e7534.js"></script>
 </head>
-
 
 <body itemscope itemtype="http://schema.org/webPage">
 
@@ -64,15 +47,11 @@
                     </li>
 
                     <li>
-                        <a href="https://twitter.com/S0f1eM?lang=fr" target="_blank" aria-label="twitter link" rel="noopener">
-                  <i class="fa fa-twitter"></i>
-                  </a>
+                        <a href="https://twitter.com/" target="_blank" aria-label="twitter link" rel="noopener"><i class="fa fa-twitter"></i></a>
                     </li>
 
                     <li>
-                        <a href="https://fr.linkedin.com/in/sophie-marchand-00a57b131" target="_blank" aria-label="linkedin link" rel="noopener">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
+                        <a href="https://fr.linkedin.com/in/" target="_blank" aria-label="linkedin link" rel="noopener"><i class="fa fa-linkedin"></i></a>
                     </li>
                 </ul>
             </nav>
@@ -102,34 +81,11 @@
 
         <section>
 
-            <h2><a class="resume" itemscope itemtype="http://schema.org/target" href="img/sophie-marchand.pdf" rel="noopener" target="_blank">See My Resume</a></h2>
+            <h2><a class="resume" itemscope itemtype="http://schema.org/target" href="yourresume.pdf" rel="noopener" target="_blank">See My Resume</a></h2>
 
-            <p>I can build websites and make front-end side development or full-stack projects with WordPress.
+            <p>I am a front-end wev developer. I can build websites from scratch or with CMS and I thrive in solving an issue. 
             </p>
-            <div class="tech-skills-box">
-                <i class="fab fa-html5 fa-2x" title="HTML5"></i>
-                <i class="fab fa-css3 fa-2x" title="CSS3"></i>
-                <i class="fab fa-less fa-2x" title="LESS"></i>
-                <i class="fab fa-sass fa-2x" title="SASS"></i>
-                <i class="fab fa-js fa-2x" title="JavaScript"></i>
-
-                <i class="fab fa-wordpress fa-2x" title="WordPress"></i>
-                <i class="fab fa-php fa-2x" title="PHP"></i>
-                <i class="fa fa-database fa-2x" title="database"></i>
-                <i class="fab fa-react fa-2x" title="React"></i>
-                <!--    <i class="fab fa-docker fa-2x" title="docker"></i>   -->
-            </div>
-
-            <p> I also thrive in projects management or in solving an issue.</p>
-
-            <p>I tend to think with an eco-conception vision in my building process.</p>
-
-            <p class="like-box">What I <i class="like fa fa-heart" title="like"></i> besides coding <i class="fas fa-book-reader" title="reading"></i>
-                <i class="fas fa-dice" title="games"></i>
-                <i class="fas fa-music" title="music"></i>
-                <i class="far fa-comments" title="sharing ideas"></i>
-                <i class="fas fa-water" title="the sea"></i>
-            </p>
+            <p> I also have some experience in projects management.</p>
 
             <div class="colors-space">
                 <div class="corail"></div>
