--- a/iuem.html
+++ b/iuem.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Sophie Marchand, Front-End Web developer" />
-    <meta name="keywords" content="web developer, front end developer, developer, react developer, wordpress developer, digital project management, portfolio developer" />
-    <title>Sophie Marchand - Web Developer</title>
+    <meta name="description" content="" />
+    <title>My Personal Website</title>
     <meta name="Content-Language" content="en"/>
     <meta name="author" content="Sophie Marchand" />
-    <meta name="Subject" content="Web Developer portfolio"/>
-    <meta name="Copyright" content="Sophie Marchand"/>
-    <meta name="Category" content="portfolio"/>
-     <!-- windows -->
-    <meta name="application-name" content="Sophie Marchand Web developer" />
-    <meta name="msapplication-TileColor" content="#644870" />
-    <meta name="msapplication-TileColor" content="#ffffff">
-     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-      <!-- apple -->
-   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-   <!-- favicon -->
-   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-   <link rel="manifest" href="/manifest.json">
-    <!--LINKEDIN & FACEBOOK-->
-    <meta property="og:url" content="https://sophiemay.dev/"/>
-    <meta property="og:title" content="Sophie Marchand - Web Developer"/>
-    <meta property="og:description" content=" Portfolio - Sophie M."/>
-    <meta property='og:image' content="img/screenshot-portfolio.png"/>
-    <!--TWITTER-->
-    <meta name="twitter:site" content="Portfolio de Sophie Marchand"/>
-    <meta name="twitter:title" content="Sophie M., Web Developer"/>
-    <meta name="twitter:description" content="Web developer Portfolio"/>
-    <meta name="twitter:image" content="img/screenshot-portfolio.png"/>
-    <link rel="canonical" href="sophiemay.dev"/>
-    <link rel="home" href="sophiemay.dev"/>
+    <meta name="Subject" content=""/>
+    <meta name="Copyright" content=""/>
+    <meta name="Category" content=""/>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.min.css" media="screen"/>
     <link href="https://fonts.googleapis.com/css?family=Chicle|Quicksand&display=swap" rel="stylesheet"/>
+    <script src="https://use.fontawesome.com/27a19e7534.js"></script>
 </head>
+
 
 <body itemscope itemtype="https://schema.org/WebPage">
 
@@ -52,24 +28,24 @@
             <nav class="right-nav">
                 <ul>
                     <li data-menuanchor="about">
-                        <a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined">ABOUT</a>
+                        <a href="/about" aria-label="go to the about section" class="underlined">ABOUT</a>
                     </li>
 
                     <li data-menuanchor="Home">
-                        <a href="https://sophiemay.dev/" aria-label="go back to the top of the page">
+                        <a href="/" aria-label="go back to the top of the page">
                             <p>HOME</p>
                         </a>
-                    </li>
+                    </li>                    
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section" class="underlined"> <img src="img/email.png" width="32px"></a>
+                        <a href="/contact" aria-label="go to the contact section" class="underlined"> <i class="fa fa-envelope fa-2x"></i></a>
                     </li>
 
                     <li data-menuanchor="Next-Project">
-                        <a href="https://sophiemay.dev/isblue" class="underlined">Next Project</a>
+                        <a href="/isblue" class="underlined">Next Project</a>
                     </li>
                 </ul>
             </nav>
@@ -78,23 +54,23 @@
             <nav class="mobile-nav">
                 <ul>
                     <li data-menuanchor="about">
-                        <a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined">ABOUT</a>
+                        <a href="/about" aria-label="go to the about section" class="underlined">ABOUT</a>
                     </li>
 
                     <li data-menuanchor="Home">
-                        <a href="https://sophiemay.dev/" aria-label="go back to the top of the page">
+                        <a href="/" aria-label="go back to the top of the page">
                             <p class="name">Sophie</p>
                         </a>
                     </li>
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section"><img src="img/email.png" width="32px"></a>
+                        <a href="/contact" aria-label="go to the contact section"><i class="fa fa-envelope"></i></a>
                     </li>
                     <li data-menuanchor="Next-Project">
-                        <a href="https://sophiemay.dev/isblue" class="underlined">Next Project</a>
+                        <a href="/isblue" class="underlined">Next Project</a>
                     </li>
                 </ul>
             </nav>
@@ -103,12 +79,10 @@
         <section class="project-description">
 
             <banner itemscope itemtype="http://schema.org/worksFor">
-                <h1 itemscope itemtype="http://schema.org/genre">European University Institute of the Sea</h1>
-
-                <a class="projects-link" href="https://www-iuem.univ-brest.fr/" target="_blank"><img src="img/Projects/iuem.png" alt="iuem-logo" class="iuem-logo"></a>
-                <a itemscope itemtype="http://schema.org/target" href="https://www-iuem.univ-brest.fr/lgo" target="_blank"><img src="img/Projects/lgo.png" alt="lgo-logo" class="iuem-logo"></a>
-                <a itemscope itemtype="http://schema.org/target" href="https://www-iuem.univ-brest.fr/lemar" target="_blank"><img src="img/Projects/lemar.png" alt="lemar-logo" class="amure-logo"></a>
-                <a itemscope itemtype="http://schema.org/target" href="https://umr-amure.fr" target="_blank"><img src="img/Projects/amure.png" alt="amure-logo" class="amure-logo"></a>
+               <a class="projects-link" href="https://www-iuem.univ-brest.fr/" target="_blank"><h1 itemscope itemtype="http://schema.org/genre">European University Institute of the Sea</h1></a>
+                <p><a itemscope itemtype="http://schema.org/target" href="https://www-iuem.univ-brest.fr/lgo" target="_blank">LGO website</a></p>
+                <p><a itemscope itemtype="http://schema.org/target" href="https://www-iuem.univ-brest.fr/lemar" target="_blank">LEMAR Website</a></p>
+                <p><a itemscope itemtype="http://schema.org/target" href="https://umr-amure.fr" target="_blank">AMURE Website</a></p>
             </banner>
 
             <div>
@@ -132,14 +106,8 @@
                     <h3>Project management</h3>
                     <ul>
                         <li>- Drafting specifications document.</li>
-                        <li>- Project planning and participation in the different phases.<br/>
-                        	<!-- content tree structure => graphic choices => pre-production environment <br/>
-                        	=> plugins choices => development of custom pages and a directory module <br/>
-                       		=> integration of custom content & CSS adjustment => deployment on production servers internally for tests <br/>
-                        	=> official deployment => collecting feedbacks and minor adjustments</li>-->
-                        <!--<li>- Adjusting the schedule while respecting the deadline.</li>-->
+                        <li>- Project planning.<br/>
                         <li>- Leading working group.</li>
-                        <!--<li>- Participation at a recruitment.</li>-->
                     </ul>
                 </div>       
             </div>
