--- a/projects.html
+++ b/projects.html
@@ -5,45 +5,19 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Sophie Marchand, Front-End Web developer" />
-    <meta name="keywords" content="web developer, front end developer, developer, react developer, wordpress developer, digital project management, portfolio developer" />
-    <title>Sophie Marchand - Web Developer</title>
+    <meta name="description" content="" />
+    <title>My Personal Website</title>
     <meta name="Content-Language" content="en"/>
     <meta name="author" content="Sophie Marchand" />
-    <meta name="Subject" content="Web Developer portfolio"/>
-    <meta name="Copyright" content="Sophie Marchand"/>
-    <meta name="Category" content="portfolio"/>
-     <!-- windows -->
-    <meta name="application-name" content="Sophie Marchand Web developer" />
-    <meta name="msapplication-TileColor" content="#644870" />
-    <meta name="msapplication-TileColor" content="#ffffff">
-     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-      <!-- apple -->
-   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
-   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
-   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
-   <!-- favicon -->
-   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-   <link rel="manifest" href="/manifest.json">
-    <!--LINKEDIN & FACEBOOK-->
-    <meta property="og:url" content="https://sophiemay.dev/"/>
-    <meta property="og:title" content="Sophie Marchand - Web Developer"/>
-    <meta property="og:description" content=" Portfolio - Sophie M."/>
-    <meta property='og:image' content="img/screenshot-portfolio.png"/>
-    <!--TWITTER-->
-    <meta name="twitter:site" content="Portfolio de Sophie Marchand"/>
-    <meta name="twitter:title" content="Sophie M., Web Developer"/>
-    <meta name="twitter:description" content="Web developer Portfolio"/>
-    <meta name="twitter:image" content="img/screenshot-portfolio.png"/>
-    <link rel="canonical" href="sophiemay.dev"/>
-    <link rel="home" href="sophiemay.dev"/>
+    <meta name="Subject" content=""/>
+    <meta name="Copyright" content=""/>
+    <meta name="Category" content=""/>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.min.css" media="screen"/>
     <link href="https://fonts.googleapis.com/css?family=Chicle|Quicksand&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <script src="https://use.fontawesome.com/27a19e7534.js"></script>
 </head>
+
 
 
 <body itemscope itemtype="http://schema.org/webPage">
@@ -55,10 +29,10 @@
             <nav class="top-nav">
                 <ul>
                     <li>
-                        <p><a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined-h"> ABOUT </a></p>
+                        <p><a href="/about" aria-label="go to the about section" class="underlined-h"> ABOUT </a></p>
                     </li>
                     <li>
-                        <p><a class="name underlined-h" href="https://sophiemay.dev/" aria-label="go back to the top of the page">Sophie M.</a></p>
+                        <p><a class="name underlined-h" href="/" aria-label="go back to the top of the page">Sophie M.</a></p>
                     </li>
                 </ul>
 
@@ -67,22 +41,19 @@
             <nav class="right-nav">
                 <ul>
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
+                        <a href="/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
                     </li>
 
                     <li>
-                        <a href="https://twitter.com/S0f1eM?lang=fr" target="_blank" aria-label="twitter link" rel="noopener">
-                  <img src="img/twitter.png" width="32px"/>
-                  </a>
+                        <a href="https://twitter.com/" target="_blank" aria-label="twitter link" rel="noopener"><i class="fa fa-twitter"></i></a>
                     </li>
 
                     <li>
-                        <a href="https://fr.linkedin.com/in/sophie-marchand-00a57b131" target="_blank" aria-label="linkedin link" rel="noopener">
-                      <img src="img/linkedin.png" width="32px"/>
+                        <a href="https://fr.linkedin.com/in/" target="_blank" aria-label="linkedin link" rel="noopener"><i class="fa fa-linkedin"></i>
                     </a>
                     </li>
                 </ul>
@@ -91,20 +62,20 @@
             <nav class="mobile-nav">
                 <ul>
                     <li data-menuanchor="about">
-                        <a href="https://sophiemay.dev/about" aria-label="go to the about section" class="underlined">ABOUT</a>
+                        <a href="/about" aria-label="go to the about section" class="underlined">ABOUT</a>
                     </li>
 
                     <li data-menuanchor="Home">
-                        <a href="https://sophiemay.dev/" aria-label="go back to the top of the page">
+                        <a href="/" aria-label="go back to the top of the page">
                             <p class="name">Sophie M.</p>
                         </a>
                     </li>
                     <li data-menuanchor="realisations">
-                        <a href="https://sophiemay.dev/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
+                        <a href="/projects" aria-label="go to the projects section" class="underlined">PROJECTS</a>
                     </li>
 
                     <li data-menuanchor="contact">
-                        <a href="https://sophiemay.dev/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
+                        <a href="/contact" aria-label="go to the contact section" class="underlined"> CONTACT</a>
                     </li>
                 </ul>
             </nav>
@@ -115,32 +86,17 @@
 
             <h2>Realisations</h2>
 
-            <div class="work-project">
-                <a href="https://sophiemay.dev/iuem" aria-label="go to the iuem project page">
-                 <img class="portfolio iuem" src="img/Projects/iuem.png" alt="logo iuem">
-                 <img class="portfolio lemar" src="img/Projects/lemar.png" alt="logo lemar">
-                 <img class="portfolio amure" src="img/Projects/amure.png" alt="logo laboratoire amure">
-                 <img class="portfolio lgo" src="img/Projects/lgo.png" alt="logo laboratoire géosciences">
-       			</a>
-
-                <a href="https://sophiemay.dev/isblue" aria-label="go to the isblue project page">
-                  <img class="portfolio isblue" src="img/Projects/isblue.png" alt="logo EUR isblue">
-                </a>
-            </div>
-
-
             <div class="playground">
 
                 <ul>
+                    <div class="work-project">
+                        <li><a href="/iuem" aria-label="go to the iuem project page">IUEM Website</a></li>
+                        <li><a href="/isblue" aria-label="go to the isblue project page">ISBlue Website</a></li>
+                    </div>
                     <li><a href="https://s0f1em.github.io/playground" target="_blank" aria-label="link to my github page made with react" rel="noopener">My React playground - Reactjs, Redux, API, axios...</a></li>
 
                     <li><a href="https://github.com/S0f1eM/wordpress-update-manager" aria-label="link to the scripts files on github" target="_blank" rel="noopener">WordPress Update Script - Bash</a></li>
 					<li><a href="https://github.com/S0f1eM/wordpress-setup-manager" aria-label="link to the scripts files on github" target="_blank" rel="noopener">WordPress Setup Script - Bash</a></li>
-
-                    <!--<li><a href="http://fullcssandgrid2018.surge.sh" aria-label="link to the css grid experimentation" rel="noopener" target="_blank">Grid CSS experimentations</a></li>-->
-
-         <!--            <li>
-             <a href="#" target="_blank" rel="noopener" aria-label="link to the react app">My React Playground</a></li> -->
 
                     <li><a href="http://2016-portfolio.surge.sh" target="_blank" aria-label="link to the 2016 portfolio" rel="nofollow">2016 Portfolio - Bootstrap, JS</a></li>
 
@@ -148,12 +104,11 @@
 
                 <p class="play-links">
                     <a class="github" href="https://github.com/S0f1eM" target="_blank" aria-label="go to the github page" rel="noopener">
-        <i class="fab fa-github fa-2x"></i></a> <a class="codepen" href="https://codepen.io/s0ph1/#" target="_blank" aria-label="go to the codepen profil" rel="noopener"><i class="fab fa-codepen fa-2x"></i></a>
+                    <i class="fab fa-github fa-2x"></i></a> 
+                    <a class="codepen" href="https://codepen.io/s0ph1/#" target="_blank" aria-label="go to the codepen profil" rel="noopener"><i class="fab fa-codepen fa-2x"></i></a>
                 </p>
 
             </div>
-
-
 
             <div class="colors-space">
                 <div class="corail"></div>
